<resources>
    <string name="app_name">STUDENT MARKS CALCULATION</string>
    <string name="emptitle">Student Marks Calculation System</string>
    <string name="stroll">Roll NO</string>
    <string name="marks1">Marks 1</string>
    <string name="lmarks1">LAB/JCOMP 1</string>
    <string name="marks2">Marks 2</string>
    <string name="lmarks2">LAB/JCOMP 2</string>
    <string name="marks3">Marks 3</string>
    <string name="lmarks3">LAB/JCOMP 3</string>
    <string name="marks4">Marks 4</string>
    <string name="marks5">Marks 5</string>
    <string name="marks6">Marks 6</string>

    <string name="total">Total</string>
    <string name="avg">Average</string>
    <string name="grade">Grade</string>
    <string name="result">RESULT</string>


    <string name="btnok">Ok</string>
    <string name="btnclear">Clear</string>
    <string name="btnnxt">Next</string>
    <string name="search">Search</string>

    <string name="txt">Text</string>

    <string name="head">STUDENTS MARK CALCULATION SYSTEM FOR VIT</string>
    <string name="foot">By Mahesh(21MCA1093) Kiran(21MCA1100) Prasath(21MCA1030) Gayathri(21MCA1104)</string>
</resources>